--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "rs-portfolio",
+  "homepage": "http://rsportfolio.com.au",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "firebase": "^8.0.1",
+    "firebase-admin": "^9.11.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
+    "react-typewriter": "^0.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
